project: Add adaptive grid method.
Improvment for the color calculation.

Signed-off-by: Itamar Shalev <itamar1111111@gmail.com>